--- a/jcart-administration-back/src/main/resources/application-dev.properties
+++ b/jcart-administration-back/src/main/resources/application-dev.properties
@@ -5,3 +5,5 @@ jwt.exclude.apiUrls=\
   /administrator/login,\
   /administrator/create,\
   /test/demourl
+spring.servlet.multipart.max-request-size=101MB
+spring.servlet.multipart.max-file-size=100MB
